# os-lang

./: .gitignore  .os-language-rules  LICENSE  README.md  build_kernel.py  gui.py  kernel.os  linker.ld  os_core.os  pyproject.toml  setup.py  test_atomic.py  test_naked.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/todos/pending/: 2026-06-11-break-implementation-into-100-micro-tasks.md
docs/: AI_SKILL.md  BARE_METAL_COOKBOOK.md  COOKBOOK_CH1_BOOT.md  LANGUAGE_GUIDE.md  LANGUAGE_REFERENCE.md  LANGUAGE_SPECIFICATION.md  SKILL.md  prd.txt
docs/superpowers/plans/: 2026-06-19-os-lang-compression-features.md
docs/superpowers/specs/: 2026-06-11-os-language-design.md  2026-06-19-os-lang-compression-features-design.md
playground/: app.py
src/: ast.py  codegen.py  lexer.py  main.py  parser.py  semantic.py  token.py
tests/: test_codegen.py  test_io_intrinsics.py  test_lexer.py  test_match.py  test_parser.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase7.py  test_phase8.py  test_phase9.py  test_pointers.py  test_semantic.py
vscode-extension/: os-lang-0.1.0.vsix  package.json
vscode-extension/syntaxes/: os.tmLanguage.json
vscode-os-lang/: language-configuration.json  package.json
vscode-os-lang/syntaxes/: os.tmLanguage.json
